--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         .chart-tab { @apply px-4 py-2 text-sm font-bold rounded-t-xl border-b-2 border-transparent text-slate-400 transition-all; }
         .chart-tab.active { @apply text-slate-700 bg-slate-50 border-orange-400; }
         
-        /* 修复了这里的闭合标签 */
-        .academic-footnote { @apply mt-5 text-[9px] text-slate-400/80 border-t border-slate-100/80 pt-3 font-sans leading-relaxed tracking-wide; }
-        .source-tag { @apply inline-block px-1.5 py-0.5 rounded-[3px] bg-slate-100 text-slate-500 font-bold mr-1.5 text-[8px] tracking-wider; }
-    </style>
-    <script>
+        /* 🚀 V9.2: 专业的文献引用排版 */
+        .reference-section { @apply mt-6 border-t border-slate-100 pt-4; }
+        .ref-group { @apply mb-3; }
+        .ref-title { @apply text-[10px] font-bold text-slate-400 mb-1 flex items-center gap-1; }
+        .ref-content { @apply text-[9px] text-slate-400/70 leading-relaxed font-sans text-justify tracking-wide; }
+    </style> <script>
         window.onerror = function(msg, url, line) {
             console.error("Global Error:", msg); 
             return false;
@@ -219,18 +220,23 @@
                                     <canvas id="mainChart"></canvas>
                                 </div>
 
-                                <div class="academic-footnote">
-                                    <div v-if="standard === 'who'">
-                                        <span class="source-tag">SOURCE</span>
-                                        {{ t.source_who }}
-                                        <br>
-                                        <span class="text-[8px] opacity-70 block mt-1">{{ t.source_note_who }}</span>
+                                <div class="reference-section">
+                                    <div class="ref-group">
+                                        <h4 class="ref-title">
+                                            <span class="text-xs">📝</span> {{ t.notes_title }}
+                                        </h4>
+                                        <p class="ref-content">
+                                            <span class="font-bold text-slate-400/90">{{ standard === 'who' ? 'WHO (2006)' : 'China (2022)' }}: </span>
+                                            {{ standard === 'who' ? t.notes_who : t.notes_china }}
+                                        </p>
                                     </div>
-                                    <div v-else>
-                                        <span class="source-tag">SOURCE</span>
-                                        <strong>{{ t.source_china }}</strong> 
-                                        <br>
-                                        <span class="text-[8px] opacity-70 block mt-1">{{ t.source_note }}</span>
+                                    <div class="ref-group">
+                                        <h4 class="ref-title">
+                                            <span class="text-xs">📚</span> {{ t.refs_title }}
+                                        </h4>
+                                        <p class="ref-content font-mono bg-slate-50 p-2 rounded border border-slate-100">
+                                            {{ standard === 'who' ? t.refs_who : t.refs_china }}
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -283,18 +289,22 @@
 
         const i18n = {
             zh: { slogan: "您的 AI 育儿专家", login_tab: "登录", register_tab: "注册", login_btn: "安全登录", register_btn: "立即注册", forgot_password: "忘记密码?", reset_title: "重置密码", verify_title: "验证您的邮箱", send_reset_code: "发送密码重置链接", back_login: "返回登录", confirm_btn: "确认验证", set_password: "设置密码 (至少6位)", password_label: "密码", email_label: "邮箱地址", sending: "发送中...", send_btn: "获取验证码", code_sent_to: "验证码已发送至", code_label: "6 位数字验证码", verifying: "验证中...", login_confirm: "进入 BabyUp", back_email: "修改邮箱", my_babies: "宝宝列表", logout: "退出", no_baby: "欢迎！先添加一个宝宝档案吧", add_baby: "添加宝宝", add_another: "添加二宝/三宝", back: "返回", new_profile: "新宝宝档案", nickname: "宝宝小名", gender: "性别", boy: "👦 男宝", girl: "👧 女宝", birth_date: "出生日期", saving: "保存中...", create_btn: "创建档案", switch_baby: "切换", days_old: "天大", record_entry: "📝 今日成长记录", edit_mode: "✏️ 编辑记录 (修改后重新生成报告)", update_btn: "保存并生成报告", weight_ph: "体重 (kg)", height_ph: "身高 (cm)", head_ph: "头围 (cm, 选填)", ai_thinking: "AI 专家思考中...", gen_report: "生成 AI 成长解读 ✨", chart_title: "生长曲线", realtime: "实时", history_title: "📅 历史档案", view_report_btn: "📄 查看报告", gen_report_btn: "✨ 生成报告", report_title: "AI 深度解读", close: "关闭", connecting: "正在连接 BabyUp 云端...", edit: "编辑", del: "删除", no_report_yet: "暂无 AI 报告", outdated_hint: "数据更新后，可重新解读", regenerate: "重新生成报告", logging_in: "登录中...", weight_tab: "体重", height_tab: "身高", head_tab: "头围", date_too_early: "日期无效：不能早于宝宝出生日期！", reset_modal_title: "🔒 设置新密码", reset_modal_desc: "请输入您的新密码以恢复访问权限", reset_confirm_btn: "更新密码",
-                // V9.1 新增中文引用
-                source_who: "世界卫生组织 (WHO) 儿童生长标准 (2006)",
-                source_note_who: "该标准描述了儿童在最佳健康环境下的理想生长状态，是目前全球通用的 0-5 岁评估金标准。",
-                source_china: "WS/T 423—2022 7岁以下儿童生长标准",
-                source_note: "中华人民共和国国家卫生健康委员会发布 (2022-09-19) | 2023-03-01 实施"
+                // 🚀 V9.2 医疗级引用 (中文)
+                notes_title: "备注",
+                refs_title: "参考文献",
+                notes_who: "基于WHO多中心生长参考研究(MGRS)。用于评估0-60个月儿童的生长发育状况。",
+                refs_who: "WHO Multicentre Growth Reference Study Group. WHO Child Growth Standards[S]. Geneva: World Health Organization, 2006.",
+                notes_china: "根据国家卫生健康委发布的最新卫生行业标准。2023年3月1日起施行，替代2009年旧版标准。",
+                refs_china: "中华人民共和国国家卫生健康委员会. WS/T 423—2022 7岁以下儿童生长标准[S]. 北京: 中国标准出版社, 2022."
             },
             en: { slogan: "Your AI Parenting Expert", login_tab: "Login", register_tab: "Register", login_btn: "Secure Login", register_btn: "Sign Up Now", forgot_password: "Forgot Password?", reset_title: "Reset Password", verify_title: "Verify Your Email", send_reset_code: "Send Password Reset Link", back_login: "Back to Login", confirm_btn: "Confirm Verify", set_password: "Set Password (min 6 chars)", password_label: "Password", email_label: "Email Address", sending: "Sending...", send_btn: "Get Code", code_sent_to: "Code sent to", code_label: "6-Digit Code", verifying: "Verifying...", login_confirm: "Enter BabyUp", back_email: "Change Email", my_babies: "My Babies", logout: "Logout", no_baby: "Welcome! Add a baby profile first", add_baby: "Add Baby", add_another: "Add Another Baby", back: "Back", new_profile: "New Profile", nickname: "Nickname", gender: "Gender", boy: "👦 Boy", girl: "👧 Girl", birth_date: "Birth Date", saving: "Saving...", create_btn: "Create Profile", switch_baby: "Switch", days_old: "days old", record_entry: "📝 Data Entry", edit_mode: "✏️ Edit Record", update_btn: "Save & Generate Report", weight_ph: "Weight (kg)", height_ph: "Height (cm)", head_ph: "Head Circ. (cm, optional)", ai_thinking: "AI Thinking...", gen_report: "Generate AI Report ✨", chart_title: "Growth Charts", realtime: "Live", history_title: "📅 History", view_report_btn: "📄 View Report", gen_report_btn: "✨ AI Report", report_title: "AI Insight", close: "Close", connecting: "Connecting to BabyUp...", edit: "Edit", del: "Del", no_report_yet: "No Report", outdated_hint: "Data changed? Regenerate report.", regenerate: "Regenerate Report", logging_in: "Logging in...", weight_tab: "Weight", height_tab: "Height", head_tab: "Head", date_too_early: "Invalid Date: Cannot be earlier than birth date!", reset_modal_title: "🔒 Set New Password", reset_modal_desc: "Please enter your new password to regain access", reset_confirm_btn: "Update Password",
-                // V9.1 新增英文引用
-                source_who: "WHO Child Growth Standards (2006). World Health Organization.",
-                source_note_who: "Current global gold standard for assessing optimal growth in children aged 0-5 years.",
-                source_china: "WS/T 423—2022 Growth Standard for Children under 7 Years of Age",
-                source_note: "Issued by National Health Commission of the PRC (2022-09-19). Implemented 2023-03-01."
+                // 🚀 V9.2 Medical References (English)
+                notes_title: "Notes",
+                refs_title: "References",
+                notes_who: "Based on the WHO Multicentre Growth Reference Study (MGRS). Generates z-scores and percentiles for children 0-5 years.",
+                refs_who: "WHO Multicentre Growth Reference Study Group. WHO Child Growth Standards[S]. Geneva: World Health Organization, 2006.",
+                notes_china: "Based on the latest industry standard issued by the NHC. Implemented on March 1, 2023.",
+                refs_china: "National Health Commission of the PRC. WS/T 423—2022 Growth Standard for Children under 7 Years of Age[S]. Beijing: Standards Press of China, 2022."
             }
         };
 
