--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         .reference-section { @apply mt-6 border-t border-slate-100 pt-4; }
         .ref-group { @apply mb-3; }
         
-        /* 🚀 V10.1: 样式严格对齐表头 (font-bold text-slate-700)，去除 font-black 和 font-sans */
+        /* 脚注样式：对齐表头，黑色加粗 */
         .ref-title { @apply text-[11px] font-bold text-slate-700 mb-1 flex items-center gap-1 uppercase tracking-wide; } 
         .ref-content { @apply text-[9px] text-slate-500 leading-relaxed font-sans text-justify tracking-wide; }
         .source-tag { @apply inline-block px-1.5 py-0.5 rounded-[3px] bg-slate-100 text-slate-600 font-bold mr-1.5 text-[8px] tracking-wider; }
 
-        /* 长图生成专用样式：确保 logo 和文字间距 */
+        /* 长图生成专用样式 */
         #share-capture-area { position: fixed; top: -9999px; left: -9999px; width: 375px; background: #fff; z-index: -1; }
         .logo-svg text { font-family: 'Nunito', sans-serif; font-weight: 800; }
     </style>
@@ -285,7 +285,7 @@
 
         <div id="share-capture-area" class="p-8 flex flex-col gap-6">
             <div class="text-center mb-2">
-                <svg width="200" height="60" viewBox="0 0 200 60" class="mx-auto block" xmlns="http://www.w3.org/2000/svg">
+                <svg width="300" height="60" viewBox="0 0 300 60" class="mx-auto block" xmlns="http://www.w3.org/2000/svg">
                     <defs>
                         <linearGradient id="brandGradient" x1="0%" y1="0%" x2="100%" y2="0%">
                             <stop offset="0%" style="stop-color:#F87171;stop-opacity:1" /> <stop offset="100%" style="stop-color:#FB923C;stop-opacity:1" /> </linearGradient>
